# Website-Crawler

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  websites.txt
app/: domain.py  exceptions.py  tests.py  worker.py
tests/: test_domain.py  test_worker.py
