[tool.poetry]
name = "websitecrawler"
version = "0.1.0"
description = "A amazing web crawler"
authors = ["Johnatas Rabelo <johnatasrs60@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
